--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
            <button id="identificar">Identificar</button>
            <span class="resultado" id="resultado-item2"></span>
         </div>
+        <div class="item3">
+            <label > Nota 1: </label>
+            <input type="text" id="nota1">
+            <label > Nota 2: </label>
+            <input type="text" id="nota2">
+            <label > Nota 3: </label>
+            <input type="text" id="nota3">
+            <label > Nota 4: </label>
+            <input type="text" id="nota4">
+            <button id="media"> Média</button>
+            <span class="resultado" id="resultado-item3"></span>
+         </div>
     </div>
 </body>
 </html>
